# masher

./: .pylintrc  CF.py  DO.py  FM.py  FMTemp.py  README.md  TBGLST.py  masher.py  newCF.py  newDO.py  newFM.py  pyproject.toml  setup.py  tox.ini
.junk/: client_C.py  server_C.py
doc/src/: SUMMARY.md
masher/: ACTIONS_C.py  CLIENT.py  HOT_BEEF.py  KEYS.py  LD_DICT.py  PROFILE.py  PROFILE_C.py  UDEV_DICT.py  __main__.py  client.pas  client.py  server.py
masher/CONF_D/: DEFAULT_ACTIONS_C.py  DEFAULT_PROFILE.toml  DEFAULT_PROFILE_C.py  P_DEFAULT.toml  actions_D.toml  dictToToml.py  profile_D.py
masher/SUBM_D/: checkMakeKeys_C.py  install.py
masherD/: server.py
